some fix to canvas spacing

--- a/src/CSS/wardrobe.css
+++ b/src/CSS/wardrobe.css
@@ -3,13 +3,15 @@
     flex-direction:row;
     justify-content: space-around; */
     padding-top:2em;
-    height:50vh;
+    /* height:50vh; */
     display:grid;
-    grid-template-columns: 0% 80% 20%;
+    grid-template-columns: .5fr 1fr 1fr .5fr;
+    padding-bottom:4em;
 }
 
 canvas {
     border:solid 1px black;
+    float:right;
 }
 
 #wardrobe-menu {
@@ -31,12 +33,15 @@ canvas {
 /* Wide displays */
 @media (min-width:901px) {
     #wardrobe-section {
-        grid-template-columns: 1fr 3fr .5fr 1fr;
+        grid-template-columns: 1fr 1fr .5fr 1fr;
     }
 }
 
-/* Moderately narrow displays */
+/* Severely narrow displays */
 @media (max-width:600px) {
+    #wardrobe-section {
+        padding-bottom:0px;
+    }
     #wardrobe-menu i {
         font-size:2em;
         float:none;
